feat: 支持批量删除